--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-ion-slider": "^1.0.17",
     "shadcn": "^2.1.1",
     "shadcn-ui": "^0.9.2",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7"
