--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "description": "openpokertools.com",
   "author": "openpokertools",
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "scripts": {
     "dev": "gatsby develop",
     "build": "gatsby build",
@@ -49,6 +47,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
