--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,5 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*",
-    "./gatsby-node.ts",
-    "./gatsby-config.ts",
-    "./plugins/**/*"
-  ]
+  "include": ["./src/**/*", "./gatsby-node.ts", "./gatsby-config.ts", "./plugins/**/*"]
 }
