--- a/biome.json
+++ b/biome.json
@@ -11,9 +11,10 @@
   },
   "formatter": {
     "enabled": true,
+    "formatWithErrors": true,
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineWidth": 100
+    "lineWidth": 80
   },
   "organizeImports": {
     "enabled": true
