--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,7 @@
     "lineWidth": 100
   },
   "organizeImports": {
-    "enabled": true
+    "enabled": false
   },
   "linter": {
     "enabled": true,
