--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "description": "openpokertools.com",
   "author": "openpokertools",
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "scripts": {
     "dev": "gatsby develop",
-    "build": "gatsby build",
+    "run-build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@loadable/component": "^5.16.4",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-label": "^2.1.3",
@@ -25,7 +28,9 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@types/loadable__component": "^5.13.9",
     "autoprefixer": "^10.4.21",
+    "caniuse-lite": "^1.0.30001713",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gatsby": "^5.14.3",
