--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@types/loadable__component": "^5.13.9",
     "autoprefixer": "^10.4.21",
     "caniuse-lite": "^1.0.30001713",
     "class-variance-authority": "^0.7.1",
@@ -57,7 +58,6 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@tailwindcss/postcss": "^4.1.3",
     "@types/loadable__component": "^5.13.9",
     "@types/node": "^22.14.1",
     "@types/react": "^18.3.20",
