--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@loadable/component": "^5.16.4",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-context-menu": "^2.2.12",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-progress": "^1.1.3",
@@ -56,7 +57,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "^2.0.0-beta.1",
     "@types/loadable__component": "^5.13.9",
     "@types/node": "^22.14.1",
     "@types/react": "^18.3.20",
