--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.6/schema.json",
+  "files": {
+    "includes": ["src/**/*", "!src/components/ui/*"]
+  },
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -27,9 +30,6 @@
         }
       }
     }
-  },
-  "files": {
-    "ignoreUnknown": false
   },
   "formatter": {
     "enabled": true,
